@@ -1,6 +1,7 @@
 package booking_app_team_2.bookie.service;
 
 import booking_app_team_2.bookie.domain.Accommodation;
+import booking_app_team_2.bookie.domain.AccommodationType;
 import booking_app_team_2.bookie.domain.Image;
 import booking_app_team_2.bookie.repository.ImageRepository;
 import org.apache.commons.io.IOUtils;
@@ -8,14 +9,17 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 @Service
 public class ImageServiceImpl implements ImageService{
@@ -37,12 +41,12 @@ public class ImageServiceImpl implements ImageService{
 
     @Override
     public Optional<Image> findOne(Long id) {
-        return Optional.empty();
+        return imageRepository.findById(id);
     }
 
     @Override
     public Image save(Image image) {
-        return null;
+        return this.imageRepository.save(image);
     }
 
     @Override
@@ -53,23 +57,49 @@ public class ImageServiceImpl implements ImageService{
     @Override
     public byte[] getImageBytes(Long imageId) throws IOException {
         Optional<Image> image=imageRepository.findById(imageId);
-        System.out.println("IME JE"+image.get().getName());
         if(image.isPresent()){
-            InputStream in = getClass().getResourceAsStream(image.get().getPath());
-            byte[] imageBytes = IOUtils.toByteArray(in);
-            return imageBytes;
+            if(image.get().isDeleted()){
+                return null;
+            }
+            Path imagePath=Path.of(image.get().getPath(),image.get().getName()+"."+image.get().getType());
+            return Files.readAllBytes(imagePath);
         }
         return null;
     }
     @Override
-    public void postAccommodationImage(byte[] image,Long accommodationId) throws IOException {
-        Optional<Accommodation>optionalAccommodation=accommodationService.findOne(accommodationId);
-        Accommodation accommodation = new Accommodation();
-        if(optionalAccommodation.isPresent()){
-            accommodation=optionalAccommodation.get();
+    public String postAccommodationImage(MultipartFile image, Long accommodationId) throws IOException {
+        Optional<Accommodation> optionalAccommodation=accommodationService.findOne(accommodationId);
+        if(optionalAccommodation.isEmpty()){
+            return null;
         }
-        String imageName="slika"+accommodation.getId().toString()+Integer.toBinaryString(accommodation.getImages().size()+1);
-        Path filePath = Paths.get("/images", imageName);
-        Files.write(filePath,image);
+        Accommodation accommodation=optionalAccommodation.get();
+        String fileName="img_"+System.currentTimeMillis();
+        Path uploadPath=Path.of("src/main/resources/images");
+        Path filePath=uploadPath.resolve(fileName+".jpg");
+        if (!Files.exists(uploadPath)) {
+            Files.createDirectories(uploadPath);
+        }
+        Files.copy(image.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+        Image newImage=new Image();
+        newImage.setName(fileName);
+        newImage.setType("jpg");
+        newImage.setPath("src/main/resources/images");
+        newImage.setDeleted(false);
+        accommodation.getImages().add(newImage);
+        this.save(newImage);
+        accommodationService.save(accommodation);
+        return fileName;
+    }
+
+    @Override
+    public String deleteImage(Long imageId){
+        Optional<Image> optionalImage=this.findOne(imageId);
+        if(optionalImage.isEmpty()){
+            return null;
+        }
+        Image image=optionalImage.get();
+        image.setDeleted(true);
+        this.save(image);
+        return "deleted";
     }
 }
